# pms

./: .gitignore  README.md  configure.ac
examples/: README
src/: Makefile.am  console.c  console.cpp  console.h  curses.c  curses.h  field.cpp  input.c  input.cpp  input.h  mach_gettime.h  main.cpp  mpd.c  mpd.cpp  mpd.h  pms.c  pms.cpp  pms.h  song.c  song.h  songlist.c  songlist.h  topbar.c  topbar.h  wconsole.cpp  window.c  window.cpp  window.h  windowmanager.cpp  wsonglist.cpp  wstatusbar.cpp  wtopbar.cpp
